fix: handle unresolved ExternalSymbol in intent modifiability check
Skip intent(out/inout) modifiability verification during deserialization
when ExternalSymbol links are not yet resolved (check_external == false).
Restore EXPR2VAR in is_modifiable_actual_argument_expr since ExternalSymbol
always has a valid link outside of deserialization.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3512,6 +3512,9 @@ RUN(NAME infer_walrus_shadow_01 LABELS llvm_infer NO_STD_F23)
 RUN(NAME infer_walrus_shadow_02 LABELS llvm_infer NO_STD_F23)
 RUN(NAME infer_walrus_shadow_03 LABELS llvm_infer NO_STD_F23)
 
+RUN(NAME verify_intent_external_01 LABELS gfortran llvm EXTRAFILES
+        verify_intent_external_01_mod1.f90 verify_intent_external_01_mod2.f90)
+
 # UTF-8 BOM handling
 RUN(NAME utf8_bom_01 LABELS gfortran llvm)
 
