WASM: Fix local variable index drift for multi-slot types
This ensures that variables like Complex (which take multiple WASM slots)
correctly offset the indices of subsequent variables in the function body.
Fixes Issue #83.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1820,6 +1820,7 @@ RUN(NAME complex_implicit_cast LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_sub_test LABELS gfortran llvm llvm_wasm llvm_wasm_emcc wasm fortran)
 RUN(NAME complex_mul_test LABELS gfortran llvm llvm_wasm llvm_wasm_emcc wasm fortran)
 RUN(NAME complex_div_test LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
+RUN(NAME wasm_complex_index_drift LABELS gfortran llvm wasm)
 RUN(NAME complex_pow_test LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME complex_unary_minus_03 LABELS gfortran llvm EXTRA_ARGS --implicit-interface)
 RUN(NAME dcmplx_01 LABELS gfortran llvm) # dcmplx, dconjg
