runtime: fix D exponent internal reads
Normalize Fortran D-exponents before parsing internal string\nreads for real scalar and array targets. This fixes cases like\n`read(str, *) arr` with input `1.D0, 2.D0, 4.D0`, where only\nthe first element was being parsed.\n\nAdd integration test `read_43` and register it with `gfortran`\nand `llvm` labels.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2712,6 +2712,7 @@ RUN(NAME read_39 LABELS gfortran llvm)
 RUN(NAME read_40 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME read_41 LABELS gfortran llvm)
 RUN(NAME read_42 LABELS gfortran llvm)
+RUN(NAME read_43 LABELS gfortran llvm)
 
 RUN(NAME write_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME write_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
