stacktrace: remove python+dwarfdump debug map pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,8 +159,6 @@ set(WITH_UNWIND no
     CACHE BOOL "Build with unwind support")
 set(WITH_BFD no
     CACHE BOOL "Build with BFD support")
-set(WITH_DWARFDUMP no
-    CACHE BOOL "Build with dwarfdump support")
 set(WITH_LINKH no
     CACHE BOOL "Build with link.h support")
 set(WITH_MACHO no
@@ -174,7 +172,7 @@ if (WITH_STACKTRACE)
     if (APPLE)
         set(WITH_MACHO yes)
         if (NOT WITH_BFD)
-            set(WITH_DWARFDUMP yes)
+            set(WITH_LLVM_STACKTRACE yes)
         endif()
     else()
         set(WITH_LINKH yes)
@@ -200,9 +198,6 @@ endif()
 if (WITH_LLVM_STACKTRACE)
     set(HAVE_LFORTRAN_LLVM_STACKTRACE yes)
 endif()
-if (WITH_DWARFDUMP)
-    set(HAVE_LFORTRAN_DWARFDUMP yes)
-endif()
 if (WITH_LINKH)
     find_package(LINKH REQUIRED)
     set(HAVE_LFORTRAN_LINK yes)
@@ -223,8 +218,8 @@ if (WITH_LLVM)
     endif()
 
     set(LFORTRAN_LLVM_COMPONENTS core support mcjit orcjit native asmparser asmprinter)
-    if (WITH_LLVM_STACKTRACE)
-        list(APPEND LFORTRAN_LLVM_COMPONENTS symbolize object)
+    if (WITH_LLVM_STACKTRACE OR WITH_RUNTIME_STACKTRACE)
+        list(APPEND LFORTRAN_LLVM_COMPONENTS symbolize object debuginfodwarf)
     endif()
     find_package(LLVM REQUIRED)
     message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
@@ -419,7 +414,6 @@ message("WITH_UNWIND: ${WITH_UNWIND}")
 message("WITH_LIBUNWIND: ${WITH_LIBUNWIND}")
 message("WITH_BFD: ${WITH_BFD}")
 message("WITH_LLVM_STACKTRACE: ${WITH_LLVM_STACKTRACE}")
-message("WITH_DWARFDUMP: ${WITH_DWARFDUMP}")
 message("WITH_LINKH: ${WITH_LINKH}")
 message("WITH_MACHO: ${WITH_MACHO}")
 message("HAVE_LFORTRAN_DEMANGLE: ${HAVE_LFORTRAN_DEMANGLE}")
