Fix nested block dependency detection
Unwrap nested Block/AssociateBlock scopes before checking whether
function/subroutine calls should become function dependencies.

This keeps contained procedures called from nested block scopes from
being incorrectly recorded as external dependencies.

Also add integration test separate_compilation_32 to cover submodule
separate compilation with a module procedure that calls a contained
function inside associate+block.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3337,6 +3337,7 @@ RUN(NAME separate_compilation_28 LABELS gfortran llvm EXTRAFILES separate_compil
 RUN(NAME separate_compilation_29 LABELS gfortran llvm EXTRAFILES separate_compilation_29a.f90 separate_compilation_29b.f90 EXTRA_ARGS --separate-compilation)
 RUN(NAME separate_compilation_30 LABELS gfortran llvm EXTRAFILES separate_compilation_30a.f90 separate_compilation_30b.f90 EXTRA_ARGS --separate-compilation)
 RUN(NAME separate_compilation_31 LABELS gfortran llvm EXTRAFILES separate_compilation_31a.f90 separate_compilation_31b.f90 EXTRA_ARGS --separate-compilation)
+RUN(NAME separate_compilation_32 LABELS gfortran llvm EXTRAFILES separate_compilation_32a.f90 separate_compilation_32b.f90 EXTRA_ARGS --separate-compilation)
 
 
 RUN(NAME no_explicit_return_type_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc
