fix: resolve inherited generic TBP binding
Allow type-bound generic bindings in an extended type to reference
specific bindings inherited from parent types.

This updates generic binding resolution to walk the parent-type chain
instead of checking only the current type symbol table.

Also add integration test type_bound_generic_member_access_02 to cover
private parent binding + generic alias in child (labels: gfortran,
llvm).

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1948,6 +1948,7 @@ RUN(NAME derived_type_with_default_init_01 LABELS gfortran llvm llvm_wasm llvm_w
 RUN(NAME multi_file_member_access_01 LABELS gfortran llvm llvm_single_invocation EXTRAFILES multi_file_member_access_01_mod.f90)
 RUN(NAME multi_file_member_access_02 LABELS gfortran llvm_single_invocation EXTRAFILES multi_file_member_access_02_mod.f90)
 RUN(NAME type_bound_generic_member_access_01 LABELS gfortran llvm)
+RUN(NAME type_bound_generic_member_access_02 LABELS gfortran llvm)
 
 RUN(NAME type_parameter_inquiry_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
