fix: avoid submodule procedure decl segfault
Guard external symbol owner resolution in submodule procedure handling
when resolving m_type_declaration, preventing a null dereference during
semantic analysis.

Add integration test submodule_24 to cover module procedures with
procedure(interface) dummy arguments implemented in a submodule.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1008,6 +1008,7 @@ RUN(NAME submodule_21a LABELS gfortran llvm_submodule EXTRAFILES submodule_21b.f
 
 RUN(NAME submodule_22 LABELS gfortran llvm)
 RUN(NAME submodule_23a LABELS gfortran llvm_submodule EXTRAFILES submodule_23b.f90 submodule_23c.f90)
+RUN(NAME submodule_24 LABELS gfortran llvm)
 
 
 
