fix: apply array indexing before ComplexRe/ComplexIm in resolve_variable2 (#10228)

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -983,6 +983,7 @@ RUN(NAME format_61 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME format_62 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME format_63 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME format_64 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME format_65 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
 RUN(NAME submodule_01 LABELS gfortran)
 RUN(NAME submodule_02 LABELS gfortran fortran)
@@ -1814,7 +1815,7 @@ RUN(NAME complex_29 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_30 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_31 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_32 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
-
+RUN(NAME complex_33 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_34 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME complex_array_member_access LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME complex_implicit_cast LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
