fix: allow private host funcs in submodules
Import private parent-module functions when building submodule host
association. This fixes function lookup in submodules for private
helpers defined in the parent module.

Add integration test submodule_26 to cover calling a private parent
helper from a module procedure implemented in a submodule.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1012,6 +1012,7 @@ RUN(NAME submodule_22 LABELS gfortran llvm)
 RUN(NAME submodule_23a LABELS gfortran llvm_submodule EXTRAFILES submodule_23b.f90 submodule_23c.f90)
 RUN(NAME submodule_24 LABELS gfortran llvm)
 RUN(NAME submodule_25a LABELS gfortran llvm_submodule EXTRAFILES submodule_25b.f90 submodule_25c.f90)
+RUN(NAME submodule_26 LABELS gfortran llvm)
 
 
 
