fix: handle defined ops on ASSOCIATE aliases
Unwrap pointer/allocatable layers before detecting whether the left
operand of a defined operator is a derived type. This keeps type-bound
operator lookup active for ASSOCIATE aliases, which are represented as
pointer variables in the ASR.

Add integration_tests/custom_operator_14.f90 to cover this case and
register it in integration_tests/CMakeLists.txt with gfortran+llvm
labels.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1776,6 +1776,7 @@ RUN(NAME custom_operator_10 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME custom_operator_11 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc EXTRA_ARGS --realloc-lhs-arrays)
 RUN(NAME custom_operator_12 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME custom_operator_13 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME custom_operator_14 LABELS gfortran llvm)
 
 RUN(NAME types_07 LABELS gfortran)
 RUN(NAME types_08 LABELS gfortran)
