test: add error tests for procedure pointer type mismatches
Added two error test cases:
- procedure_pointer_no_interface: Tests error for procedure() without interface
- procedure_pointer_type_mismatch: Tests error for function/subroutine mismatch

Registered tests in tests/tests.toml with appropriate ASR verification.
Both tests now produce clear semantic errors instead of crashes.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -4521,6 +4521,14 @@ filename = "errors/class_procedure_extra_args.f90"
 asr = true
 
 [[test]]
+filename = "errors/procedure_pointer_no_interface.f90"
+asr = true
+
+[[test]]
+filename = "errors/procedure_pointer_type_mismatch.f90"
+asr = true
+
+[[test]]
 filename = "errors/incorrect_number_args_function.f90"
 asr = true
 
