Fix vtable call argument mismatch
When calling a type-bound procedure with array section arguments through
virtual dispatch (class(T)), the pass_array_by_data pass would update
the StructMethodDeclaration to point to the lowered function (with
unpacked array args) but skip expanding the call arguments. This
happened because can_edit_call() returned false for Pointer-typed
temporaries created by earlier passes, and the early return was taken
since m_module was false.

The fix skips the early return for StructMethodDeclaration calls,
ensuring call arguments are expanded to match the lowered function
signature stored in the vtable.

Fixes #10275.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2457,6 +2457,7 @@ RUN(NAME class_117 LABELS gfortran llvm)
 RUN(NAME class_118 LABELS gfortran llvm)
 RUN(NAME class_119 LABELS gfortran llvm)
 RUN(NAME class_120 LABELS gfortran llvm)
+RUN(NAME class_121 LABELS gfortran llvm)
 
 RUN(NAME class_procedure_args_01 LABELS gfortran llvm)
 
