--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -3299,6 +3299,10 @@ filename = "errors/continue_compilation_ff_2.f"
 fixed_form_cc_asr = true
 
 [[test]]
+filename = "errors/slash_init_warning_paths.f90"
+asr = true
+
+[[test]]
 filename = "errors/continue_compilation_simd.f90"
 semantics_only_cc = true
 
