--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2740,6 +2740,7 @@ RUN(NAME read_42 LABELS gfortran llvm)
 RUN(NAME read_43 LABELS gfortran llvm)
 RUN(NAME read_44 LABELS gfortran llvm)
 RUN(NAME read_45 LABELS gfortran llvm)
+RUN(NAME read_46 LABELS gfortran llvm) 
 
 RUN(NAME write_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME write_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
