--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -2028,6 +2028,10 @@ filename = "../integration_tests/format_58.f90"
 run = true
 
 [[test]]
+filename = "../integration_tests/format_66.f90"
+run = true
+
+[[test]]
 filename = "../integration_tests/print_09.f90"
 run = true
 
