Fix custom operator lookup on RHS type
When a binary custom operator (e.g., .x.) is defined as a
type-bound procedure on the right operand's type with pass(self),
the compiler would error out after failing to find it in the left
operand's type, without checking the right operand's type.

Remove the premature error abort so the lookup falls through to
check the second (right) operand's struct before giving up.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1781,6 +1781,7 @@ RUN(NAME custom_operator_12 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME custom_operator_13 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME custom_operator_14 LABELS gfortran llvm)
 RUN(NAME custom_operator_15 LABELS gfortran llvm)
+RUN(NAME custom_operator_16 LABELS gfortran llvm)
 
 RUN(NAME types_07 LABELS gfortran)
 RUN(NAME types_08 LABELS gfortran)
