Fix array section stride in TBP calls
Remove the is_pointer check in the array_passed_in_function_call pass so
that pointer-typed temporaries (created by the array_struct_temporary
pass for array section arguments) go through the contiguity check.
Previously the check was skipped, causing non-contiguous sections like
a(1:n, 1:n2) from a larger array to be treated as contiguous, producing
wrong element access strides.

Fixes #10290.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -807,6 +807,7 @@ RUN(NAME arrays_100 LABELS gfortran llvm)
 RUN(NAME arrays_101 LABELS gfortran llvm)
 RUN(NAME arrays_102 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc EXTRA_ARGS --realloc-lhs-arrays)
 RUN(NAME arrays_103 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME arrays_104 LABELS gfortran llvm)
 
 # DISABLED: #8115 - ICE: get_struct_sym_from_struct_expr returns nullptr for empty struct array constructors [tp ::]
 # RUN(NAME array_init LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
