--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3476,3 +3476,5 @@ RUN(NAME infer_walrus_shadow_03 LABELS llvm_infer NO_STD_F23)
 RUN(NAME utf8_bom_01 LABELS gfortran llvm)
 
 RUN(NAME deferred_shape_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+
+RUN(NAME assumed_type_01 LABELS gfortran llvm)
