Update deps in insert_deallocate pass
The insert_deallocate pass can introduce new SubroutineCall nodes (e.g.
finalizer calls for intent(out) struct args) but did not recompute
function dependencies afterwards. This caused ASR verify to fail with:

  Function construct depends on finalize but isn't found in its
  dependency list.

Add PassUtils::UpdateDependenciesVisitor at the end of the pass,
following the same pattern used by other passes.

Add deallocate_02 integration test to cover spec expressions that use a
finalizable type constructor.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2701,6 +2701,7 @@ RUN(NAME pass_array_by_data_13 LABELS gfortran llvm)
 RUN(NAME implicit_deallocate_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
 RUN(NAME deallocate_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME deallocate_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
 RUN(NAME read_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME read_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc COPY_TO_BIN read_02_data.txt)
