fix: handle StructType in get_type_from_ttype_t when arg_expr is null
When c_sizeof is called on a struct variable, the SizeOfType node's
m_arg is a StructType_t. The LLVM codegen crashed with a segfault
because get_type_from_ttype_t tried to call get_struct_sym_from_struct_expr
with a null arg_expr. Fix by constructing the LLVM struct type directly
from the StructType_t's data member types when no expression context
is available.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1023,6 +1023,7 @@ RUN(NAME submodule_30a LABELS gfortran llvm_submodule EXTRAFILES submodule_30b.f
 RUN(NAME submodule_31 LABELS gfortran llvm)
 RUN(NAME submodule_32 LABELS gfortran llvm)
 RUN(NAME submodule_33 LABELS gfortran llvm)
+RUN(NAME c_sizeof_02 LABELS gfortran llvm)
 
 
 RUN(NAME floor_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc wasm fortran) # floor body
