fix: pass assumed-rank array descriptor by pointer for bind(C) functions
For bind(C) functions with type(*) :: a(..) parameters, the C side
expects CFI_cdesc_t* (pointer to descriptor). The convert_args function
was only handling DescriptorArray physical type for this case, missing
AssumedRankArray which also needs pointer-to-descriptor passing.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1026,6 +1026,7 @@ RUN(NAME submodule_33 LABELS gfortran llvm)
 RUN(NAME c_sizeof_02 LABELS gfortran llvm)
 RUN(NAME iso_c_binding_04 LABELS gfortran llvm)
 RUN(NAME procedure_pointer_12 LABELS gfortran llvm)
+RUN(NAME bindc_assumed_rank_01 LABELS gfortran llvm)
 
 
 RUN(NAME floor_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc wasm fortran) # floor body
