Finalize components of derived types
When a derived type has no FINAL subroutine but contains components of
finalizable types, those components must still be finalized when the
object goes out of scope (Fortran 2018 §7.5.6.2).

Fix is_finalizable_type() to resolve the correct Struct_t for each
member when recursing, instead of reusing the outer struct symbol. Also
add FINAL procedure calls for finalizable components in
finalize_struct().

Closes: component finalization at block scope exit.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1968,6 +1968,7 @@ RUN(NAME derived_types_109 LABELS gfortran llvm)
 RUN(NAME derived_types_110 LABELS gfortran llvm)
 RUN(NAME derived_types_111 LABELS gfortran llvm)
 RUN(NAME derived_types_112 LABELS llvm)
+RUN(NAME derived_types_113 LABELS gfortran llvm)
 RUN(NAME derived_type_with_default_init LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME derived_type_with_default_init_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME multi_file_member_access_01 LABELS gfortran llvm llvm_single_invocation EXTRAFILES multi_file_member_access_01_mod.f90)
