fix: resolve LLVM verification errors for bind(C) string args and assumed-rank shape
Fix two codegen bugs triggered when compiling caffeine:

1. Remove the BindC exception in handle_llvm_pointers2/handle_llvm_pointers_new_classes
   macros so that string_descriptor types are always treated as inherently pointer-like,
   preventing a signature mismatch (string_descriptor** vs string_descriptor*) for
   procedure pointer calls with allocatable character arguments in bind(C) interfaces.

2. Lower product(shape(a)) to size(a) when a is an assumed-rank array, avoiding the
   zero-sized FixedSizeArray that shape() produced for assumed-rank and the resulting
   "huge alignment values are unsupported" LLVM verification error.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -812,6 +812,7 @@ RUN(NAME arrays_104 LABELS gfortran llvm)
 # DISABLED: #8115 - ICE: get_struct_sym_from_struct_expr returns nullptr for empty struct array constructors [tp ::]
 # RUN(NAME array_init LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME assumed_rank_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME assumed_rank_02 LABELS gfortran llvm)
 RUN(NAME select_rank_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME select_rank_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME select_rank_03 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
