fix: store data-initialized value through equivalenced pointer in LLVM codegen
    When a data statement initializes an equivalenced variable, the
    semantics layer wraps it in an Associate node with a Pointer_t target.
    The LLVM codegen was storing the scalar value directly into the pointer
    slot (store i32 19, i32** %i1) instead of dereferencing the pointer
    first. Add a check in visit_Associate to load the pointer and store
    through it when the target is a pointer type and the value is a
    non-pointer scalar.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3133,6 +3133,7 @@ RUN(NAME equivalence_16 LABELS gfortran llvm
     EXTRA_ARGS -fdefault-integer-8
     GFORTRAN_ARGS -fdefault-integer-8)
 RUN(NAME equivalence_17 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME equivalence_18 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
 RUN(NAME fortran_primes_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
