Fix pointer bounds remapping to array section
When a pointer with bounds remapping (e.g., ap(0:n,0:n) => a(:,k)) was
associated with an array section, the data pointer was set to the base
of the source array without computing the offset for the specific
section. This caused reassociation to a different section (e.g., a(:,2))
to still point to the original section (a(:,1)).

Compute the linearized offset to the first element of the source array
section using the source descriptor's dimension info (stride and lower
bound) and GEP the data pointer accordingly.

Fixes #10323.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -841,6 +841,7 @@ RUN(NAME pointer_03 LABELS gfortran llvm)
 RUN(NAME pointer_04 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME pointer_05 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME pointer_06 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME pointer_07 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 
 RUN(NAME array_section_is_non_allocatable LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME array_indices_array_section LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
