test: add and register test

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3184,6 +3184,7 @@ RUN(NAME present_03 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME present_04 LABELS gfortran llvm EXTRA_ARGS --implicit-interface)
 RUN(NAME present_05 LABELS gfortran llvm EXTRA_ARGS --implicit-interface)
 RUN(NAME present_06 LABELS gfortran llvm EXTRA_ARGS --implicit-interface)
+RUN(NAME present_07 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME types_20 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME arrayprint_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME print_arr_05 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
