fix: ICE in visit_Associate with stale tmp
In visit_Associate, after visiting target and value expressions, tmp
held a stale ASR expr node. When no branch produced an Associate
statement (e.g. mismatched FunctionType in continue-compilation mode),
the stale expr was passed to STMT() in transform_stmts, causing an
assertion failure.

Fix by setting tmp = nullptr after extracting the expressions, so
transform_stmts safely skips the unhandled case.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2116,6 +2116,7 @@ RUN(NAME associate_34 LABELS gfortran llvm)
 RUN(NAME associate_35 LABELS gfortran llvm)
 RUN(NAME associate_36 LABELS gfortran llvm EXTRA_ARGS --realloc-lhs-arrays)
 RUN(NAME associate_37 LABELS gfortran llvm EXTRA_ARGS --realloc-lhs-arrays)
+RUN(NAME associate_38 LABELS gfortran llvm)
 
 RUN(NAME attr_dim_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME attr_dim_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
