Fix passing function to procedure pointer arg
When a bare function name is passed as an actual argument to a
subroutine expecting a procedure pointer (procedure(...), pointer), the
LLVM codegen was passing the function pointer directly (void()*) instead
of wrapping it in an alloca to produce the expected void()** type. This
caused an LLVM module verification failure.

The fix stores the function pointer into an alloca and passes the
address when the target parameter has a pointer type.

Fixes #10364.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2873,6 +2873,7 @@ RUN(NAME procedure_29 LABELS gfortran llvm
     EXTRA_ARGS --realloc-lhs-arrays)
 RUN(NAME procedure_30 LABELS llvm)
 RUN(NAME procedure_31 LABELS gfortran llvm)
+RUN(NAME procedure_32 LABELS gfortran llvm)
 
 
 RUN(NAME allocated_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
