Fix optional class(*) assumed-rank crash
The LLVM codegen crashed when compiling a call to a subroutine with an
optional class(*), dimension(..) argument that was not present. After
the transform_optional_argument_functions pass, the absent optional is
replaced with a dummy scalar of polymorphic type (StructType). The
scalar-to-assumed-rank wrapping code then called
store_intrinsic_type_vptr with this StructType, which is not an
intrinsic type, causing a segfault in get_type_from_ttype_t.

Fix by skipping the intrinsic vptr store when the actual argument is
itself a polymorphic type (StructType). Also guard bounds_check_call
against null call arguments.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -821,6 +821,7 @@ RUN(NAME arrays_107 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME assumed_rank_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME assumed_rank_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME assumed_rank_03 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME assumed_rank_04 LABELS gfortran llvm)
 RUN(NAME select_rank_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc fortran)
 RUN(NAME select_rank_02 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME select_rank_03 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
