Fix c_ptr type mismatch in return type
When a function return type was declared as type(c_ptr) in the
prefix-style declaration, the type was resolved to StructType instead of
CPtr. This caused a type mismatch error when assigning the function
result to a type(c_ptr) variable.

Add is_c_ptr/is_c_funptr checks in the function return type resolution
path, matching the existing checks for variable declarations in
determine_type().

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -3027,6 +3027,7 @@ RUN(NAME c_ptr_08 LABELS gfortran llvm)
 RUN(NAME c_ptr_09 LABELS gfortran llvm)
 RUN(NAME c_ptr_10 LABELS gfortran llvm)
 RUN(NAME c_ptr_11 LABELS gfortran llvm)
+RUN(NAME c_ptr_12 LABELS gfortran llvm)
 
 RUN(NAME c_f_proc_ptr_01 LABELS gfortran llvm EXTRAFILES c_f_proc_ptr_01.c) # c_f_procpointer
 
