Fix inquire with int64 size/pos vars
The _lfortran_inquire runtime function expects i32* for size and pos
parameters. When the user's Fortran variable is integer(int64), the LLVM
codegen was passing i64* directly, causing a type mismatch error.

Fix by using a temporary i32 alloca for the runtime call when the user
variable kind differs from i32, then sign-extending/truncating the
result back to the user's variable after the call.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -2383,6 +2383,7 @@ RUN(NAME inquire_06 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME inquire_07 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
 RUN(NAME inquire_08 LABELS gfortran llvm)
 RUN(NAME inquire_09 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
+RUN(NAME inquire_10 LABELS gfortran llvm)
 RUN(NAME test_inquire_size LABELS gfortran llvm )
 RUN(NAME test_backspace_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc COPY_TO_BIN file_01_data.txt)
 RUN(NAME test_endfile_01 LABELS gfortran llvm llvm_wasm llvm_wasm_emcc)
