Fix operator interface modfile loading
When a custom operator's return type depended on argument dimensions via
size(), loading the module file caused ASR verify errors because the
return type contained Var references to function-local variables that
were not in scope at the call site.

Fix the return type resolution for custom operator calls to use the
function's m_return_var type with handle_return_type() to properly
substitute argument references, matching how GenericProcedure handles
it.

Also add CustomOperator to the serialization switch cases so operator
symbols round-trip through modfiles.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1811,6 +1811,7 @@ RUN(NAME custom_operator_14 LABELS gfortran llvm)
 RUN(NAME custom_operator_15 LABELS gfortran llvm)
 RUN(NAME custom_operator_16 LABELS gfortran llvm)
 RUN(NAME custom_operator_17 LABELS gfortran llvm EXTRA_ARGS --realloc-lhs-arrays)
+RUN(NAME custom_operator_18 LABELS gfortran llvm EXTRA_ARGS --realloc-lhs-arrays)
 
 RUN(NAME types_07 LABELS gfortran)
 RUN(NAME types_08 LABELS gfortran)
