Fix ExternalSymbol chain in re-exports
When a function call's m_original_name (e.g. a GenericProcedure) was
itself an ExternalSymbol from a re-exporting module, creating a new
ExternalSymbol for it would produce a chain (ExternalSymbol pointing to
ExternalSymbol) which fails the ASR verifier.

Resolve through ExternalSymbol to the actual symbol and its owning
module before creating the new ExternalSymbol.

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -1598,6 +1598,7 @@ RUN(NAME modules_66 LABELS gfortran llvm
 RUN(NAME modules_67 LABELS gfortran llvm
         EXTRAFILES modules_67_origin.f90 modules_67_reexport.f90 modules_67_consumer.f90)
 RUN(NAME modules_68 LABELS gfortran llvm)
+RUN(NAME modules_69 LABELS gfortran llvm)
 
 RUN(NAME associate_06 LABELS gfortran EXTRAFILES
         associate_06_module.f90)
